fix: donation btn link wrong color on ios

--- a/assets/styles/_buttons.scss
+++ b/assets/styles/_buttons.scss
@@ -72,6 +72,7 @@
 
 
 .btn-link {
+    color: inherit;
     background-color: transparent !important;
     border-color: transparent !important;
 }
